<resources>
    <string name="app_name">MP3</string>

    <!--  Main  -->
    <string name="main_tab_my_music">My Music</string>
    <string name="main_tab_discover">Discover</string>
    <string name="main_tab_chart">#chart</string>
    <string name="main_tab_radio">Radio</string>
    <string name="main_tab_feed">Feed</string>
    <string name="hint_search">Song, playlist, artist…</string>

    <!--  My music  -->
    <string name="library">Library</string>
    <string name="song">Song</string>
    <string name="on_device">Device</string>
    <string name="upload">Upload</string>
    <string name="album">Album</string>
    <string name="mv">MV</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="recently">Recently</string>
    <string name="create_playlist">Create playlist</string>
    <string name="playlist_suggest">Playlist suggestion</string>
    <string name="recently_song">Recently song</string>
    <string name="most_popular">Most popular</string>
    <string name="top_10">Top 10</string>
    <string name="top_50">Top 50</string>
    <string name="top_100">Top 100</string>

    <!--  Chart  -->
    <string name="view_more">More</string>
</resources>